--- a/7._TCP_UDP_Sockets/src/Webserver/WebPages/index.html
+++ b/7._TCP_UDP_Sockets/src/Webserver/WebPages/index.html
@@ -11,7 +11,7 @@
 <p style="text-align: center">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <p style="text-align: center">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
 <p style="text-align: center">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<div class="wrapper">
+<div class="wrapper-button">
 <button onclick="location.href='about.html'" type="button">
     About</button>
 </div>
